--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "mysql": "^2.15.0",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "body-parser": "^1.18.2"
   }
 }
