--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js",
-    "test": "cls && mocha"
+    "test": "cls && set NODE_ENV=test && mocha"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "nodemon": "^1.14.11"
   },
   "devDependencies": {
-    "mocha": "^5.0.0"
+    "mocha": "^5.0.0",
+    "request": "^2.83.0"
   }
 }
